# NumiFocus

./: .env  .gitignore  README.md  requirements.txt
backend/: logging_config.py  main.py  process_transaction_data.py  pyproject.toml
backend/database/transaction_data/: accounts.txt  foster_robinhood_crypto.csv  foster_robinhood_traditional_ira.csv  natalia_usaa_credit.csv  process_history.csv
backend/models/: instruments.py
backend/routes/: google_api_client.py  paystubs.py
backend/services/instruments/: checking.py  credit.py  crypto.py  investing.py  ira.py  normalized_transaction_instrument.py  savings.py  transaction_instrument.py
frontend/: index.html  package-lock.json  postcss.config.js  requirements.txt  test.html  vite.config.ts
frontend/styles/: styles.css
