[project]
name = "numifocus"
version = "0.1.0"
description = ""
authors = [
    {name = "Xeplosion",email = "xeplosion@xegames.online"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "beautifulsoup4 (==4.13.4)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "cachetools (==5.5.2)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "fastapi (==0.116.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "google-api-core (==2.24.2)",
    "google-api-python-client (==2.169.0)",
    "google-auth (==2.39.0)",
    "google-auth-httplib2 (==0.2.0)",
    "google-auth-oauthlib (==1.2.2)",
    "googleapis-common-protos (==1.70.0)",
    "gspread (==6.2.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httplib2 (==0.22.0)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.2.1)",
    "keyring (==25.6.0)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "oauthlib (==3.2.2)",
    "opencv-python (==4.11.0.86)",
    "packaging (==25.0)",
    "pandas (==2.3.1)",
    "pbs-installer (==2025.7.2)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "poetry (==2.1.3)",
    "poetry-core (==2.1.3)",
    "proto-plus (==1.26.1)",
    "protobuf (==6.30.2)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pymupdf (==1.26.3)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "pytesseract (==0.3.13)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.3)",
    "requests-oauthlib (==2.0.0)",
    "requests-toolbelt (==1.0.0)",
    "rsa (==4.9.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "starlette (==0.46.2)",
    "tomlkit (==0.13.3)",
    "trove-classifiers (==2025.5.9.12)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "uritemplate (==4.1.1)",
    "urllib3 (==2.4.0)",
    "virtualenv (==20.31.2)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
